unpackaged/main/default/objects/Netsuite_Listfields_InternalId_Mapping__c/Netsuite_Listfields_InternalId_Mapping__c.object-meta.xml
<CustomObject>
    <description>Created for Integration</description>
    <label>Netsuite Listfields InternalId Mapping</label>
    <nameField>
        <label>Netsuite Listfields InternalId Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Netsuite Listfields InternalId Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>