unpackaged/main/default/objects/Netsuite_Listfields_InternalId_Mapping__c/fields/Netsuite_Internal_Id__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Internal_Id__c</fullName>
    <label>Netsuite Internal Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>