unpackaged/main/default/objects/Netsuite_Listfields_InternalId_Mapping__c/fields/Netsuite_List_Fields_KeynValues__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_List_Fields_KeynValues__c</fullName>
    <label>Netsuite List Fields KeynValues</label>
    <length>100</length>
    <type>Text</type>
</CustomField>